[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "caproto-apps"
version = "0.0.1"
authors = [
  { name="Mark Wolfman", email="wolfman@anl.gov" },
]
description = "Implementations of select EPICS-compatible records in caproto."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# [tool.setuptools]
# packages = ["haven", "firefly"]

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"